Reformatting code, fixing CBI calculation

--- a/Aim2/code/Python/00nifc-fire-perimeters.ipynb
+++ b/Aim2/code/Python/00nifc-fire-perimeters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "b0687419-4278-4604-8efa-b9c34a68d9fe",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,8 @@
     "\"\"\"\n",
     "\n",
     "import os, sys, time, gc\n",
-    "import matplotlib\n",
+    "import geopandas as gpd\n",
+    "import rioxarray as rxr\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -38,9 +39,6 @@
     "\n",
     "maindir = '/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/'\n",
     "projdir = os.path.join(maindir, 'aspen-fire/Aim2/')\n",
-    "\n",
-    "# maindir = '/home/jovyan/' # cyverse\n",
-    "# projdir = os.path.join(maindir,'data-store/data/iplant/home/maco4303/data/JFSP')\n",
     "\n",
     "print(\"Ready to go !\")"
    ]
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "75810b4b-89b5-4eed-b023-cafbac3ed82c",
    "metadata": {},
    "outputs": [],
@@ -73,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "1059a21f-5055-4ed7-87dc-89bb7f302f7b",
    "metadata": {},
    "outputs": [
@@ -83,14 +81,14 @@
        "Index(['na_l3name', 'geometry'], dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load western U.S. ecoregions\n",
-    "fp = os.path.join(projdir,'data/spatial/mod/boundaries/na_cec_eco_l3_west.gpkg')\n",
+    "fp = os.path.join(projdir,'data/spatial/raw/boundaries/na_cec_eco_l3_west.gpkg')\n",
     "ecol3 = gpd.read_file(fp)\n",
     "ecol3 = ecol3[['NA_L3NAME','geometry']]\n",
     "ecol3 = ecol3.rename(columns={'NA_L3NAME': 'na_l3name'})\n",
@@ -99,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "25843395-76d2-471d-83d9-dbd3b0f86867",
    "metadata": {},
    "outputs": [
@@ -126,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "a7b7ca4c-53d4-44a7-9209-34c77322f7c8",
    "metadata": {},
    "outputs": [
@@ -264,13 +262,13 @@
        "4  MULTIPOLYGON (((-1032962.010 1673014.612, -103...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Tidy the columns\n",
+    "# Tidy the columns.\n",
     "events = events[['OBJECTID','MAP_METHOD','GEO_ID','IRWINID','FIRE_YEAR',\n",
     "                 'INCIDENT','FEATURE_CA','GIS_ACRES','geometry']]\n",
     "events.head()"
@@ -278,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1b75538e-1cbe-4c24-99bb-566f82d24785",
    "metadata": {},
    "outputs": [
@@ -296,7 +294,7 @@
        "Name: GIS_ACRES, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "3dcab74c-d7b8-40ba-ab72-7c04672ddefe",
    "metadata": {},
    "outputs": [
@@ -328,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "3bddb666-0a19-43bc-b46f-5ae64406bee4",
    "metadata": {},
    "outputs": [
@@ -347,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "deffeb8b-2fa1-440d-9a77-1e31b9b23a9c",
    "metadata": {},
    "outputs": [
@@ -390,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "46be3b0b-bb41-4bef-ac7c-2792864c291b",
    "metadata": {},
    "outputs": [
@@ -400,7 +398,7 @@
        "0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "99aa7830-60fd-4670-be8f-4baf0c4d527d",
    "metadata": {},
    "outputs": [
@@ -472,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "a9a73c1d-c3ca-4136-90d1-6ac01223c6b4",
    "metadata": {},
    "outputs": [
@@ -520,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "292c6ad1-a899-4d6c-bba7-34e1aa7841a6",
    "metadata": {},
    "outputs": [
@@ -538,10 +536,10 @@
     {
      "data": {
       "text/plain": [
-       "35"
+       "633"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +561,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
+   "id": "34e8c970-0857-4f05-b776-741f7126e2b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Crop the raster by the fire bounds (with small buffer)\n",
+    "bounds = events_west.total_bounds\n",
+    "evt_da_crop = evt_da.rio.clip_box(\n",
+    "    minx=bounds[0]+1000, # +1000 meters for a small buffer\n",
+    "    miny=bounds[1]+1000, \n",
+    "    maxx=bounds[2]+1000, \n",
+    "    maxy=bounds[3]+1000\n",
+    ")\n",
+    "del evt_da, bounds\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "5ecd87d4-8d37-404f-97ce-34420560171c",
    "metadata": {},
    "outputs": [
@@ -585,36 +613,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "34e8c970-0857-4f05-b776-741f7126e2b4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "66"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Crop the raster by the fire bounds (with small buffer)\n",
-    "bounds = events_west_.total_bounds\n",
-    "evt_da_crop = evt_da.rio.clip_box(\n",
-    "    minx=bounds[0]+1000, # +1000 meters for a small buffer\n",
-    "    miny=bounds[1]+1000, \n",
-    "    maxx=bounds[2]+1000, \n",
-    "    maxy=bounds[3]+1000\n",
-    ")\n",
-    "del evt_da, bounds\n",
-    "gc.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "9a6a2666-e014-481e-9f25-341882e70f62",
    "metadata": {},
@@ -628,12 +626,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate zonal stats for the wildfire perimeters"
+    "# Calculate zonal stats for the wildfire perimeters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "id": "24f98d08-b914-4db9-8cdd-1aff41a76cd4",
    "metadata": {},
    "outputs": [
@@ -641,7 +639,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total elapsed time: 1.17 minutes.\n",
+      "Total elapsed time: 1.19 minutes.\n",
       "\n",
       "~~~~~~~~~~\n",
       "\n"
@@ -661,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "id": "a9e6ddb5-5ab0-4766-af9d-2d73f46ff1d3",
    "metadata": {},
    "outputs": [
@@ -792,7 +790,7 @@
        "9         8  7016    5.0         789.0   0.633714"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "1d659cea-cd9d-4487-96a2-2eb9b6b325c9",
    "metadata": {},
    "outputs": [
@@ -821,7 +819,7 @@
        "758"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "id": "ddf3a7e2-7037-4bdc-b0e3-05a6bee8523f",
    "metadata": {},
    "outputs": [
@@ -864,7 +862,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "id": "acc9ed08-4fce-4066-b691-317e245d3683",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1005,7 @@
        "4                     Spruce-Fir Forest and Woodland  Closed tree canopy  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "id": "2976134e-eb8f-4156-b797-5f131f7194eb",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "3c22c557-02e5-43c4-b0b1-ce13754023c8",
    "metadata": {},
    "outputs": [
@@ -1065,14 +1063,6 @@
     "props_df.to_csv(out_fp)\n",
     "print(f\"Saved to {out_fp}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4368f986-dfa2-452d-bd07-45f9e136b579",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1102,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "id": "32a9f333-ff5e-40ce-9710-9b7eabf561a3",
    "metadata": {},
    "outputs": [
@@ -1125,17 +1115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "id": "4d96e31c-d675-423a-8575-04c06c9317b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "513"
+       "0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 32,
    "id": "5c68bc96-d38d-46d7-a148-544a1600446b",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 33,
    "id": "d09c7e79-663d-479a-89e4-adab2b442da3",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1176,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 34,
    "id": "d00a4d7d-3f04-42e4-ab88-faad370c1d64",
    "metadata": {},
    "outputs": [
@@ -1219,7 +1209,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
+   "id": "791d2bd5-3637-4398-b363-1f2e176497d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 4 duplicate Fire Year/Fire Name combinations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for remaining duplicates on year+fire name\n",
+    "props_gdf['YEAR_NAME'] = props_gdf['FIRE_YEAR'].astype(str) + props_gdf['INCIDENT'].astype(str)\n",
+    "print(f\"There are {props_gdf.duplicated(subset='YEAR_NAME').sum()} duplicate Fire Year/Fire Name combinations.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "3a959c27-e72d-41eb-91a4-43a372e29447",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>FIRE_YEAR</th>\n",
+       "      <th>INCIDENT</th>\n",
+       "      <th>GIS_ACRES</th>\n",
+       "      <th>pct_aspen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>100355</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Avalanche</td>\n",
+       "      <td>28.92</td>\n",
+       "      <td>1.194030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>101006</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Avalanche</td>\n",
+       "      <td>28.92</td>\n",
+       "      <td>1.194030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>5017</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Lost Spring</td>\n",
+       "      <td>19.00</td>\n",
+       "      <td>1.633987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>25723</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Lost Spring</td>\n",
+       "      <td>86.81</td>\n",
+       "      <td>9.349593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>48977</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Michaud Creek</td>\n",
+       "      <td>343.40</td>\n",
+       "      <td>1.199143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234</th>\n",
+       "      <td>80116</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Michaud Creek</td>\n",
+       "      <td>343.54</td>\n",
+       "      <td>1.199657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>205</th>\n",
+       "      <td>70102</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Ryan</td>\n",
+       "      <td>28585.43</td>\n",
+       "      <td>10.863899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>282</th>\n",
+       "      <td>41932</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Ryan</td>\n",
+       "      <td>28243.65</td>\n",
+       "      <td>10.758135</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     OBJECTID FIRE_YEAR       INCIDENT  GIS_ACRES  pct_aspen\n",
+       "259    100355      2022      Avalanche      28.92   1.194030\n",
+       "263    101006      2022      Avalanche      28.92   1.194030\n",
+       "26       5017      2023    Lost Spring      19.00   1.633987\n",
+       "135     25723      2023    Lost Spring      86.81   9.349593\n",
+       "194     48977      2022  Michaud Creek     343.40   1.199143\n",
+       "234     80116      2022  Michaud Creek     343.54   1.199657\n",
+       "205     70102      2018           Ryan   28585.43  10.863899\n",
+       "282     41932      2018           Ryan   28243.65  10.758135"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicates = props_gdf[props_gdf['YEAR_NAME'].duplicated(keep=False)]  # Keep all duplicates\n",
+    "duplicates = duplicates.sort_values(by=['INCIDENT'])\n",
+    "duplicates[['OBJECTID','FIRE_YEAR','INCIDENT','GIS_ACRES','pct_aspen']].head(len(duplicates))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9303c890-f528-4631-906f-44e70a535351",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   OBJECTID FIRE_YEAR       INCIDENT  GIS_ACRES  pct_aspen\n",
+      "0    100355      2022      Avalanche      28.92   1.194030\n",
+      "1     48977      2022  Michaud Creek     343.40   1.199143\n",
+      "2     70102      2018           Ryan   28585.43  10.863899\n",
+      "3      5017      2023    Lost Spring      19.00   1.633987\n",
+      "4     25723      2023    Lost Spring      86.81   9.349593\n",
+      "There are 295 after resolving the last duplicates.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Handle remaining duplicate fire boundaries (keep the largest)\n",
+    "# 'Lost Spring' above is not actually a duplicate\n",
+    "temp = duplicates[duplicates['INCIDENT'] == 'Lost Spring']\n",
+    "duplicates_ = duplicates[duplicates['INCIDENT'] != 'Lost Spring']\n",
+    "duplicates_ = duplicates_.drop_duplicates(subset='INCIDENT', keep='first')\n",
+    "duplicates_ = pd.concat([duplicates_,temp], ignore_index=True)\n",
+    "print(duplicates_[['OBJECTID','FIRE_YEAR','INCIDENT','GIS_ACRES','pct_aspen']].head())\n",
+    "\n",
+    "# Merge back with the original dataframe\n",
+    "non_dups = props_gdf[~props_gdf['YEAR_NAME'].duplicated(keep=False)]  # keep only non-duplicates\n",
+    "props_gdf_ = pd.concat([non_dups, duplicates_], ignore_index=True) # merge back\n",
+    "print(f\"There are {len(props_gdf_)} after resolving the last duplicates.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "54f216d5-c1f4-4028-9e67-b217b5a8c9c5",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1405,7 @@
    "source": [
     "# Save this file out\n",
     "out_fp = os.path.join(projdir,'data/spatial/mod/NIFC/nifc-interagency_2018_to_2023-EVT-aspen.gpkg')\n",
-    "props_gdf.to_file(out_fp)\n",
+    "props_gdf_.to_file(out_fp)\n",
     "print(f\"Saved file to {out_fp}\")"
    ]
   },
@@ -1266,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 52,
    "id": "c8cc0e06-2b6e-48d7-bdc9-1eaba7042674",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1486,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save the map as a PNG\n",
-    "plt.savefig(os.path.join(projdir, 'figures/Fig1_all_aspen_fires-NIFC.png'), dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(os.path.join(projdir, 'figures/Figure1_Aspen-Fires_NIFC.png'), dpi=300, bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
@@ -1338,17 +1509,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 53,
    "id": "72a473e8-a06a-4bb1-b560-d45a1914a126",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50"
+       "5"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,26 +1535,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9da2c526-5a86-4738-a39a-d83086e4328c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Attempt to join to ICS-209-PLUS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "046f12f0-f84c-4c2e-926d-afd29e1339cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fp = os.path.join("
-   ]
   }
  ],
  "metadata": {
