--- a/Aim2/code/Python/04afd-landcover-biophys.ipynb
+++ b/Aim2/code/Python/04afd-landcover-biophys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "ba44202a-9fdb-4249-9cb3-039c1d0744f5",
    "metadata": {},
    "outputs": [
@@ -16,7 +16,14 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Landcover assessments for MODIS and VIIRS AFDs\n",
+    "LANDFIRE assessments for MODIS and VIIRS AFDs western U.S.\n",
+    "\n",
+    "Data sources:\n",
+    "    - LANDFIRE Existing Vegetation Type (EVT) proportional cover\n",
+    "    - LANDFIRE Canopy Bulk Density (CBD) mean\n",
+    "    - LANDIFRE Canopy Base Height (CBH) mean\n",
+    "    - LANDFIRE Canopy Cover (CC) percentage\n",
+    "    \n",
     "Author: maxwell.cook@colorado.edu\n",
     "\"\"\"\n",
     "\n",
@@ -43,204 +50,13 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>LATITUDE</th>\n",
-       "      <th>LONGITUDE</th>\n",
-       "      <th>BRIGHTNESS</th>\n",
-       "      <th>SCAN</th>\n",
-       "      <th>TRACK</th>\n",
-       "      <th>ACQ_DATE</th>\n",
-       "      <th>ACQ_TIME</th>\n",
-       "      <th>SATELLITE</th>\n",
-       "      <th>INSTRUMENT</th>\n",
-       "      <th>CONFIDENCE</th>\n",
-       "      <th>...</th>\n",
-       "      <th>FRP</th>\n",
-       "      <th>DAYNIGHT</th>\n",
-       "      <th>TYPE</th>\n",
-       "      <th>id</th>\n",
-       "      <th>ig_date</th>\n",
-       "      <th>last_date</th>\n",
-       "      <th>ACQ_MONTH</th>\n",
-       "      <th>ACQ_YEAR</th>\n",
-       "      <th>ACQ_DATETIME</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>37.5025</td>\n",
-       "      <td>-112.7346</td>\n",
-       "      <td>300.2</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>2018-01-12</td>\n",
-       "      <td>0548</td>\n",
-       "      <td>Terra</td>\n",
-       "      <td>MODIS</td>\n",
-       "      <td>22</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>44975</td>\n",
-       "      <td>2018-01-26</td>\n",
-       "      <td>2018-02-02</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2018-01-12 05:48:00+00:00</td>\n",
-       "      <td>POLYGON ((-1457354.388 1736257.445, -1457354.3...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>38.5271</td>\n",
-       "      <td>-111.9255</td>\n",
-       "      <td>320.4</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>2018-01-25</td>\n",
-       "      <td>1856</td>\n",
-       "      <td>Terra</td>\n",
-       "      <td>MODIS</td>\n",
-       "      <td>76</td>\n",
-       "      <td>...</td>\n",
-       "      <td>74.9</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "      <td>43657</td>\n",
-       "      <td>2018-01-25</td>\n",
-       "      <td>2018-01-30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2018-01-25 18:56:00+00:00</td>\n",
-       "      <td>POLYGON ((-1368392.364 1837372.349, -1368392.3...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>38.5212</td>\n",
-       "      <td>-111.8990</td>\n",
-       "      <td>319.6</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>2018-01-25</td>\n",
-       "      <td>1856</td>\n",
-       "      <td>Terra</td>\n",
-       "      <td>MODIS</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>72.3</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "      <td>43657</td>\n",
-       "      <td>2018-01-25</td>\n",
-       "      <td>2018-01-30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2018-01-25 18:56:00+00:00</td>\n",
-       "      <td>POLYGON ((-1366245.947 1836338.869, -1366245.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>38.5227</td>\n",
-       "      <td>-111.9221</td>\n",
-       "      <td>343.4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2018-01-25</td>\n",
-       "      <td>2036</td>\n",
-       "      <td>Aqua</td>\n",
-       "      <td>MODIS</td>\n",
-       "      <td>93</td>\n",
-       "      <td>...</td>\n",
-       "      <td>53.8</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "      <td>43657</td>\n",
-       "      <td>2018-01-25</td>\n",
-       "      <td>2018-01-30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2018-01-25 20:36:00+00:00</td>\n",
-       "      <td>POLYGON ((-1368185.097 1836837.103, -1368185.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>38.5155</td>\n",
-       "      <td>-111.9088</td>\n",
-       "      <td>343.1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2018-01-25</td>\n",
-       "      <td>2036</td>\n",
-       "      <td>Aqua</td>\n",
-       "      <td>MODIS</td>\n",
-       "      <td>93</td>\n",
-       "      <td>...</td>\n",
-       "      <td>53.1</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "      <td>43657</td>\n",
-       "      <td>2018-01-25</td>\n",
-       "      <td>2018-01-30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2018-01-25 20:36:00+00:00</td>\n",
-       "      <td>POLYGON ((-1367186.979 1835849.890, -1367186.9...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   LATITUDE  LONGITUDE  BRIGHTNESS  SCAN  TRACK   ACQ_DATE ACQ_TIME SATELLITE  \\\n",
-       "0   37.5025  -112.7346       300.2   1.2    1.1 2018-01-12     0548     Terra   \n",
-       "1   38.5271  -111.9255       320.4   2.2    1.4 2018-01-25     1856     Terra   \n",
-       "2   38.5212  -111.8990       319.6   2.2    1.4 2018-01-25     1856     Terra   \n",
-       "3   38.5227  -111.9221       343.4   1.0    1.0 2018-01-25     2036      Aqua   \n",
-       "4   38.5155  -111.9088       343.1   1.0    1.0 2018-01-25     2036      Aqua   \n",
-       "\n",
-       "  INSTRUMENT  CONFIDENCE  ...   FRP  DAYNIGHT  TYPE     id    ig_date  \\\n",
-       "0      MODIS          22  ...  12.0         N     0  44975 2018-01-26   \n",
-       "1      MODIS          76  ...  74.9         D     0  43657 2018-01-25   \n",
-       "2      MODIS           0  ...  72.3         D     0  43657 2018-01-25   \n",
-       "3      MODIS          93  ...  53.8         D     0  43657 2018-01-25   \n",
-       "4      MODIS          93  ...  53.1         D     0  43657 2018-01-25   \n",
-       "\n",
-       "   last_date ACQ_MONTH ACQ_YEAR              ACQ_DATETIME  \\\n",
-       "0 2018-02-02         1     2018 2018-01-12 05:48:00+00:00   \n",
-       "1 2018-01-30         1     2018 2018-01-25 18:56:00+00:00   \n",
-       "2 2018-01-30         1     2018 2018-01-25 18:56:00+00:00   \n",
-       "3 2018-01-30         1     2018 2018-01-25 20:36:00+00:00   \n",
-       "4 2018-01-30         1     2018 2018-01-25 20:36:00+00:00   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((-1457354.388 1736257.445, -1457354.3...  \n",
-       "1  POLYGON ((-1368392.364 1837372.349, -1368392.3...  \n",
-       "2  POLYGON ((-1366245.947 1836338.869, -1366245.9...  \n",
-       "3  POLYGON ((-1368185.097 1836837.103, -1368185.0...  \n",
-       "4  POLYGON ((-1367186.979 1835849.890, -1367186.9...  \n",
-       "\n",
-       "[5 rows x 22 columns]"
+       "Index(['LATITUDE', 'LONGITUDE', 'BRIGHTNESS', 'SCAN', 'TRACK', 'ACQ_DATE',\n",
+       "       'ACQ_TIME', 'SATELLITE', 'INSTRUMENT', 'CONFIDENCE', 'VERSION',\n",
+       "       'BRIGHT_T31', 'FRP', 'DAYNIGHT', 'TYPE', 'VID', 'NIFC_ID', 'NIFC_NAME',\n",
+       "       'START_YEAR', 'DISCOVERY_DATE', 'WF_CESSATION_DATE', 'na_l3name',\n",
+       "       'ACQ_MONTH', 'ACQ_YEAR', 'ACQ_DATETIME', 'afdID', 'geometry'],\n",
+       "      dtype='object')"
       ]
      },
      "execution_count": 4,
@@ -249,17 +65,10 @@
     }
    ],
    "source": [
-    "# Load the MODIS and VIIRS AFDs (buffered)\n",
-    "\n",
-    "modis_afd = os.path.join(projdir,f'data/spatial/mod/AFD/MOD61-afd_fired-aspen_2018_to_2023_buffer.gpkg')\n",
-    "snpp_afd = os.path.join(projdir,f'data/spatial/mod/AFD/SNPP-afd_fired-aspen_2018_to_2023_buffer.gpkg')\n",
-    "\n",
-    "afds = {\n",
-    "    'MOD61': gpd.read_file(modis_afd),\n",
-    "    'SNPP': gpd.read_file(snpp_afd)\n",
-    "}\n",
-    "\n",
-    "afds['MOD61'].head()"
+    "# Load the combined MODIS and VIIRS AFDs (buffered)\n",
+    "fp = os.path.join(projdir,f'data/spatial/mod/AFD/combined-afd_aspen-fires_2018_to_2023_buffer.gpkg')\n",
+    "afds = gpd.read_file(fp)\n",
+    "afds.columns"
    ]
   },
   {
@@ -268,16 +77,27 @@
    "id": "3cfc236c-4465-4663-b7d3-82ee47f68a7e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tidy columns for simplicity.\n",
+    "afds = afds[['afdID','START_YEAR','geometry']]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ce28aa9-d350-4d41-92f4-4a57dc8676a5",
+   "id": "80f5683e-d9c9-469b-943f-d51a973a65d7",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03d72f03-2289-44db-8e59-c68741913e4d",
+   "metadata": {},
    "source": [
-    "# Load the landfire EVT data"
+    "### Calculate the Proportional EVT in AFD Observations\n",
+    "\n",
+    "From LANDFIRE EVT (ca. 2016) calculate the proportional cover within AFD observations (buffers). "
    ]
   },
   {
@@ -286,11 +106,13 @@
    "id": "a1f17721-749c-485e-9b8b-97f284acd0a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load the EVT raster"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "a3bb5f44-14d3-460f-aa09-1848d5a381bd",
    "metadata": {},
    "outputs": [
@@ -308,10 +130,10 @@
     {
      "data": {
       "text/plain": [
-       "1330"
+       "81"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,6 +155,40 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "29e40e01-088e-4c61-9041-36bc31d2ab6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crop to fire bounds.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbfff329-c537-4b0d-bbc4-4cf286c3bccc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ff92d78-79f9-425e-a7b9-990c0c1682dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1c6b1dc-e9b9-401a-873c-0525a4ff3fad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ebd9201-39be-49dc-bcaf-433c4d8c9963",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -361,7 +217,28 @@
    "id": "e832c900-84dc-42d6-aff2-db8c596eb5ff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "start = time.time()    \n",
+    "\n",
+    "# Read in the LANDFIRE layers\n",
+    "cbd_path = os.path.join(maindir,'data/landcover/LANDFIRE/LF2020_CBD_200_CONUS/Tif/LC20_CBD_200.tif')\n",
+    "cbh_path = os.path.join(maindir,'data/landcover/LANDFIRE/LF2020_CBH_200_CONUS/Tif/LC20_CBH_200.tif')\n",
+    "tcc_path = os.path.join(maindir,'data/landcover/LANDFIRE/LF2020_CC_200_CONUS/Tif/LC20_CC_200.tif')\n",
+    "\n",
+    "lf_paths = [cbd_path, cbh_path, tcc_path]\n",
+    "\n",
+    "results = []\n",
+    "for lf in lf_paths:\n",
+    "    print(f'Processing {os.path.basename(lf)}')\n",
+    "    name = os.path.basename(lf).split('_')[1]\n",
+    "    \n",
+    "    # Calculate the zonal statistics\n",
+    "    df = calc_zonal_stats(vectors=frp_plots[['VID','geometry']], raster_path=lf, attr=name)\n",
+    "    \n",
+    "    results.append(df)\n",
+    "\n",
+    "print(f\"Total elapsed time: {round((time.time() - start)/60)} minutes\")"
+   ]
   }
  ],
  "metadata": {
