--- a/Aim2/code/Python/03afd-severity_CBI.ipynb
+++ b/Aim2/code/Python/03afd-severity_CBI.ipynb
@@ -2,44 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "e8875da6-de28-494e-8590-5deff24c959f",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -129,7 +95,7 @@
     }
    ],
    "source": [
-    "def monitor_export(task, sleep=30):\n",
+    "def monitor_gee_export(task, sleep=30):\n",
     "    \"\"\" Monitors EE export task \"\"\"\n",
     "    while task.active():\n",
     "        print('Waiting for export to finish..\\n\\tPatience young padawan.')\n",
@@ -306,7 +272,7 @@
    ],
    "source": [
     "# Load the CBI mosaic\n",
-    "cbi = ee.Image('projects/jfsp-aspen/assets/CBI/afd_aspen-fires_cbi_mosaic')\n",
+    "cbi = ee.Image('projects/jfsp-aspen/assets/CBI/afd_aspen-fires_2018_to_2023_cbi-mosaic')\n",
     "print(cbi.bandNames().getInfo())"
    ]
   },
@@ -365,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c6a39923-8b86-4f0b-9667-c3cde87c6048",
    "metadata": {},
    "outputs": [
@@ -429,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "57dd03bb-7a02-432a-9bd8-7d4b86d87aa1",
    "metadata": {},
    "outputs": [
@@ -476,8 +442,6 @@
       "\tPatience young padawan.\n",
       "Waiting for export to finish..\n",
       "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
       "Export completed successfully !!!!\n"
      ]
     }
@@ -499,7 +463,7 @@
     "export_task.start()\n",
     "print(\"Export to Earth Engine Asset started!\")\n",
     "# Monitor the task until it's finished\n",
-    "monitor_export(export_task, 120) # print every 2 min"
+    "monitor_gee_export(export_task, 120) # print every 2 min"
    ]
   },
   {
@@ -546,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3f5a8af4-f861-42ae-9369-e15c39c1701a",
    "metadata": {},
    "outputs": [
@@ -593,7 +557,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c41da35e-944c-4a00-a951-bd2a750063b3",
    "metadata": {},
    "outputs": [
@@ -764,7 +728,7 @@
        "4    0.715643  MODIS12040  246.728583  206.400000  156.294200  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "bd5c2098-b2d0-4711-ba2e-382ab5c21a4b",
    "metadata": {},
    "outputs": [
@@ -851,7 +815,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
